fix: style.css change aside section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewpoint" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
   <title>tanajaym/cv</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -51,6 +52,9 @@
         <p>Player App (React, HTML, CSS, JS, React-hook-form, React router)</p>
         <a href="https://github.com/tanajaym/playerApp">link</a>
         <h2>Code Examples</h2>
+        <pre><code>function multiply(a, b){
+                    return(a * b);
+                  }</code></pre>
       </main>
     </div>
     
