--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>  
+<body> 
   <div class="container">
     <header>
       <div class="header">
         <div class="myImage">
-          <img src="./src/IMG_2452.JPG" alt="myImage" width="300" height="300">
+          <img src="./src/11zon_cropped.png" alt="myImage" width="300" height="300">
         </div>
         <div class="head-myInfo">
-          <h1>SOBOLEVA EVA, junior Frontend-developer</h1>
+          <h1>SOBOLEVA EVA <br> junior Frontend-developer</h1>
           <h2>About Me</h2>
-            <p>I can describe myself as an outgoing and openminded person who are able to find a common language with ant ytpe of person. In my spare time I'm into going to gym, crocheing and taking part in hackathon from time to time.</p>
+            <p>Roses are red, violets are blue, the world was not prepared for the masterpiece: Shrek 2.</p>
         </div>
       </div>
     </header> 
@@ -27,8 +27,11 @@
         <div class="aside-box">
           <div class="aside-inf">
             <h2>Contacts</h2>
-            <h2>Skills</h2>
             <ul>
+              <li>Phone: +79514681044</li>
+            </ul>
+            <h2>Skills</h2>
+            <ul class="skill-list">
               <li>React</li>
               <li>HTML5, CSS3, JS</li>
               <li>Git, GitHub, GitLub</li>
@@ -49,18 +52,20 @@
       </aside>
       <main>  
         <h2>Projects</h2>
-        <p>Player App (React, HTML, CSS, JS, React-hook-form, React router)</p>
-        <a href="https://github.com/tanajaym/playerApp">link</a>
+        <ul>
+          <li> <a href="https://github.com/tanajaym/playerApp">Player App (React, HTML, CSS, JS, React-hook-form, React router)</a></li>
+          <li> <a href="https://tanajaym.github.io/rsschool-cv/cv">Markdown CV</a></li>
+        </ul>
         <h2>Code Examples</h2>
         <pre><code>function multiply(a, b){
                     return(a * b);
                   }</code></pre>
       </main>
     </div>
-    
-    <footer>
-      <p>RsSchool</p>
-    </footer>
+    <!-- <footer>
+      <div class="footer">
+      </div>
+    </footer> -->
   </div>
 </body>
 
