fix: change container properties. feat: in html add div fore h1

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <header>
       <div class="header">
         <div class="myImage">
-          <img src="./src/11zon_cropped.png" alt="myImage" width="300" height="300">
+          <img src="./src/11zon_cropped.png" alt="myImage" width="250" height="250">
         </div>
         <div class="head-myInfo">
-          <h1>SOBOLEVA EVA <br> junior Frontend-developer</h1>
+          <div class="header-h1">
+            <h1>SOBOLEVA EVA</h1>
+            <h1>Junior frontend-develooper</h1>
+          </div>
           <h2>About Me</h2>
-            <p>Roses are red, violets are blue, the world was not prepared for the masterpiece: Shrek 2.</p>
+            <p>RShtirlic prigotovilsja k boju, a prishla gjorl...</p>
         </div>
       </div>
     </header> 
