fix: change img position , fix: change header wrap

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </div>
         <div class="head-myInfo">
           <div class="header-h1">
-            <h1>SOBOLEVA EVA</h1>
-            <h1>Junior frontend-develooper</h1>
+            <h1>SOBOLEVA EVA, <br> <span> Junior frontend-develooper</span></h1>
           </div>
           <h2>About Me</h2>
             <p>RShtirlic prigotovilsja k boju, a prishla gjorl...</p>
