--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>tanajaym/cv</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -55,8 +56,10 @@
       <main>  
         <h2>Projects</h2>
         <ul>
-          <li> <a href="https://github.com/tanajaym/playerApp">Player App (React, HTML, CSS, JS, React-hook-form, React router)</a></li>
-          <li> <a href="https://tanajaym.github.io/rsschool-cv/cv">Markdown CV</a></li>
+          <div class="project-list">
+            <li> <a href="https://github.com/tanajaym/playerApp" target="_blank">Player App (React, HTML, CSS, JS, React-hook-form, React router)</a></li>
+            <li> <a href="https://tanajaym.github.io/rsschool-cv/cv" target="_blank">Markdown CV</a></li>
+          </div>
         </ul>
         <h2>Code Examples</h2>
         <pre><code>function multiply(a, b){
