refactor: delete div from ul in project-list and add class "project-list. delete / selfclosing tag from met"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>tanajaym/cv</title>
@@ -55,11 +55,9 @@
       </aside>
       <main>  
         <h2>Projects</h2>
-        <ul>
-          <div class="project-list">
+        <ul class="project-list">
             <li> <a href="https://github.com/tanajaym/playerApp" target="_blank">Player App (React, HTML, CSS, JS, React-hook-form, React router)</a></li>
             <li> <a href="https://tanajaym.github.io/rsschool-cv/cv" target="_blank">Markdown CV</a></li>
-          </div>
         </ul>
         <h2>Code Examples</h2>
         <pre><code>function multiply(a, b){
