feat: add footer and add its style. refactor: delete white space in html and css. feat: add new color to root

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
                   }</code></pre>
       </main>
     </div>
-    <!-- <footer>
+    <footer>
       <div class="footer">
+        <p class="footer-txt"> Here's the footer!</p>
       </div>
-    </footer> -->
+    </footer>
   </div>
 </body>
 
